--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,13 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        
+        <!-- 스프링 데이터 JPA -->
+        <dependency>
+        	<groupId>org.springframework.data</groupId>
+        	<artifactId>spring-data-jpa</artifactId>
+        	<version>1.8.0.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
